# rust-slimmer_box

./: Cargo.toml  README.md  example.rs
.github/workflows/: rust.yml
src/: clone_unsized.rs  lib.rs  rkyv.rs  serde.rs  slim_pointee.rs
