[package]
name = "rkyv_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default_features = [ "alloc" ]

[dependencies]
ptr_meta = { version = "0.2.0", default_features = false }
rkyv = { version = "0.7.39", features = [], optional = true }

[features]
std = []
rkyv = [ "dep:rkyv" ]