[package]
name = "slimmer_box"
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["Qqwy / Marten"]
description = "A packed alternative to Box<T> whose 'fat' pointer is 'slimmer'"
keywords = ["box", "pointers", "no_std", "alloc", "cache"]
categories = ["no-std", "memory-management"]
readme = "README.md"
repository = "https://github.com/qqwy/rust-slimmer_box"

[dependencies]
ptr_meta = { version = "0.2.0", default_features = false }
rkyv = { version = "0.7.39", features = [], optional = true }

[features]
std = []

[package.metadata.docs.rs]
features = ["rkyv"]